--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:sqlserver://localhost:1433;database=IPISport;encrypt=
 spring.datasource.username=sa
 spring.datasource.password=Soleil123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.show-sql=true
